// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Modification > AdjustDwellTime renders empty correctly 1`] = `
<Fragment>
  <SelectFeedRouteAndPatterns
    feeds={Array []}
    onChange={[Function]}
    routePatterns={Array []}
    routes={
      Array [
        "route1",
      ]
    }
    trips={
      Array [
        "abcd",
      ]
    }
  />
  <SelectStops
    routeStops={Array []}
    selectedStops={Array []}
    setMapState={[MockFunction]}
    update={[MockFunction]}
  />
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
  </div>
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <NumberInput
    min={0}
    onChange={[Function]}
    units="seconds"
  />
</Fragment>
`;

exports[`Component > Modification > AdjustDwellTime renders with data correctly 1`] = `
<Fragment>
  <SelectFeedRouteAndPatterns
    feeds={Array []}
    onChange={[Function]}
    routePatterns={
      Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -122.0246,
                36.9707,
              ],
              Array [
                -122.0279,
                37.049,
              ],
              Array [
                -121.9799,
                37.2299,
              ],
              Array [
                -121.9445,
                37.324,
              ],
              Array [
                -121.936,
                37.353,
              ],
              Array [
                -121.924,
                37.365,
              ],
            ],
            "type": "LineString",
          },
          "name": "Mock Pattern",
          "pattern_id": "mock-pattern-id",
          "stops": Array [
            Object {
              "stop_id": "1",
              "stop_lat": 36.9707,
              "stop_lon": -122.0246,
              "stop_name": "Santa Cruz",
            },
            Object {
              "stop_id": "2",
              "stop_lat": 37.049,
              "stop_lon": -122.0279,
              "stop_name": "Scotts Valley",
            },
          ],
          "trips": Array [
            Object {
              "duration": 1234,
              "end_time": 13579,
              "start_time": 12345,
              "trip_headsign": "To Downtown",
              "trip_id": "abcd",
              "trip_short_name": "The Express",
            },
          ],
        },
      ]
    }
    routes={
      Array [
        "route1",
      ]
    }
    trips={
      Array [
        "abcd",
      ]
    }
  />
  <SelectStops
    routeStops={Array []}
    selectedStops={Array []}
    setMapState={[MockFunction]}
    update={[MockFunction]}
  />
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
  </div>
  <div
    className="radio"
  >
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <NumberInput
    min={0}
    onChange={[Function]}
    units="seconds"
  />
</Fragment>
`;
